loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:11: error: not found: value nbPase
  nbPase match{
  ^